Learning Project/src/objects/Candidate__c.object
<CustomObject>
    <description>Represents an applicant who might apply for
one or more positions</description>
    <fields>
        <fullName>currently_employed__c</fullName>
        <defaultValue>true</defaultValue>
        <label>currently employed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>description__c</fullName>
        <label>description</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>education__c</fullName>
        <label>education</label>
        <picklist>
            <picklistValues>
                <fullName>HS Diploma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA/BS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA/MS/MBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PHD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Doc</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>first_name__c</fullName>
        <externalId>true</externalId>
        <label>first name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>last_name__c</fullName>
        <externalId>true</externalId>
        <label>last name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Candidate</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>aka_int_queue_Candidate</fullName>
        <filterScope>Queue</filterScope>
        <label>aka int queue</label>
        <queue>aka_int_queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>prac_queue_Candidate</fullName>
        <filterScope>Queue</filterScope>
        <label>prac queue</label>
        <queue>prac_queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>practice_queue123_Candidate</fullName>
        <filterScope>Queue</filterScope>
        <label>practice queue123</label>
        <queue>practice_queue123</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>C-{00000}</displayFormat>
        <label>Candidate Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>candidates</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>